--- a/frontend/src/components/Post/Post.css
+++ b/frontend/src/components/Post/Post.css
@@ -50,7 +50,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px;
+    padding: 15px;
     padding-left: 10px;
     padding-right: 10px;
     border-top: 0.1em solid gray;
@@ -68,5 +68,8 @@
         width: 100%;
         border-radius: 0;
         margin: 0;
+    }
+    .post-actions{
+        font-size: 1.6em;
     }
 }
