--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color:white
+    color:white;
+    font-family: "Josefin Sans";
 }
 
 
