--- a/frontend/src/pages/Admin/Admin.css
+++ b/frontend/src/pages/Admin/Admin.css
@@ -122,11 +122,21 @@ form label{
 
 
 
-.create-user{
-    margin-top: 100px;
+.create-user, .edit-user{
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
+}
+
+.edit-user #isAdmin{
+    width: auto !important;
+    margin-bottom: 20px;
+}
+
+.edit-user h3{
+    margin-bottom: 10px;
 }
 
 
