--- a/frontend/src/pages/Registration/Registration.css
+++ b/frontend/src/pages/Registration/Registration.css
@@ -51,3 +51,18 @@ a{
     display: block;
 }
 
+
+
+@media only screen and (max-width:500px) {
+    .register-box form input{
+        width: 85%;
+
+    }
+    .register-box form div{
+        margin-left: 0;
+        margin-right: 0;
+
+    }
+    
+}
+
