--- a/frontend/src/components/Announcement/Announcement.css
+++ b/frontend/src/components/Announcement/Announcement.css
@@ -63,9 +63,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 1.6em;
+    
 }
 
 .carusel *{
+    cursor: pointer;
     color: rgba(255, 255, 255, 0.2);
 }
 
