--- a/frontend/src/components/Announcement/Announcement.css
+++ b/frontend/src/components/Announcement/Announcement.css
@@ -39,12 +39,19 @@
 
 .announcement-footer{
     align-items: center;
-    line-height: 20px;
     padding: 15px;
     padding-left: 10px;
     padding-right: 10px;
     border-top: 0.1em solid gray;
 
+}
+
+.announcement-footer div{
+    padding: 10px;
+}
+
+.announcement-footer div *{
+    line-height: 20px;
 }
 
 .announcement-actions{
