--- a/frontend/src/components/Quotes/Quotes.css
+++ b/frontend/src/components/Quotes/Quotes.css
@@ -20,13 +20,12 @@
 }
 
 .quote h2{
-    padding: 10px;
+    padding: 5px;
 }
 
 
 .quote-footer{
     align-items: center;
-    line-height: 20px;
     padding: 15px;
     padding-left: 10px;
     padding-right: 10px;
@@ -34,6 +33,14 @@
 
 }
 
+
+.quote-footer div{
+    padding: 10px;
+}
+
+.quote-footer div *{
+    line-height: 20px;
+}
 
 @media only screen and (max-width: 500px) {
     .quote{
